--- a/EmbeddedDIFx/EmbeddedDIFx.csproj
+++ b/EmbeddedDIFx/EmbeddedDIFx.csproj
@@ -45,9 +45,13 @@
     <EmbeddedResource Include="Resources\DIFxAPI_x86.dll" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="packages.config" />
     <None Include="Properties\EmbeddedDIFx.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>if $(ConfigurationName) == Release $(SolutionDir)packages\NuGet.CommandLine.4.5.1\tools\NuGet.exe pack $(ProjectPath) -properties Configuration=Release</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
