--- a/EmbeddedDIFx/Properties/EmbeddedDIFx.nuspec
+++ b/EmbeddedDIFx/Properties/EmbeddedDIFx.nuspec
@@ -1,17 +1,21 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>$id$</id>
-    <version>$version$</version>
-    <title>$title$</title>
     <authors>$author$</authors>
-    <owners>$author$</owners>
     <copyright>$copyright$</copyright>
     <description>$description$</description>
-    <licenseUrl>https://opensource.org/licenses/MIT</licenseUrl>
+    <id>$id$</id>
+    <license type="expression">MIT</license>
+    <owners>$author$</owners>
     <projectUrl>https://github.com/DavidRieman/EmbeddedDIFx</projectUrl>
+    <readme>docs\README.md</readme>
+    <releaseNotes>Now with updated exception handling.</releaseNotes>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <tags>DIFx installation uninstallation DriverPackageInstall DriverPackageUninstall driver embedded</tags>
-    <releaseNotes>Now with updated exception handling.</releaseNotes>
+    <title>$title$</title>
+    <version>$version$</version>
   </metadata>
+  <files>
+    <file src="..\README.md" target="docs" />
+  </files>
 </package>
