Update version in prep for new NuGet release, including corrected readme file too.

--- a/EmbeddedDIFx/Properties/EmbeddedDIFx.nuspec
+++ b/EmbeddedDIFx/Properties/EmbeddedDIFx.nuspec
@@ -16,6 +16,6 @@
     <version>$version$</version>
   </metadata>
   <files>
-    <file src="..\README.md" target="docs" />
+    <file src="..\..\README.md" target="docs" />
   </files>
 </package>
